fixed alignement when buying products, name and balance are now display on top of page when shopping

--- a/source/style_default.css
+++ b/source/style_default.css
@@ -19,3 +19,8 @@ td{
     top: 50px;
     right: 10px;
 }
+
+.name_and_balance{
+    position: relative;
+    top: -20px;
+}
